--- a/css/styling.css
+++ b/css/styling.css
@@ -1,13 +1,27 @@
+:root {
+    --primary-bg: #1c1c1c; /* Dark cinema background */
+    --secondary-bg: #333; /* Slightly lighter background for contrast */
+    --text-black: #000000; /* dark black text */
+    --text-color: #fff; /* Bright white text */
+    --accent-color: #f56b2a; /* Cinematic orange-red for highlights */
+    --subtext-color: #888; /* Subtle gray for less important text */
+    --highlight-color: #d35400; /* Bold, cinematic accent color */
+    --border-color: #555; /* Soft gray for borders */
+    --card-bg: #202020; /* Card background to match the dark theme */
+    --footer-bg: #f56b2a; /* Footer matches accent color */
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: var(--primary-bg);
+    color: var(--text-color); /* Assuming you have color variables */
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: var(--secondary-bg);
+    color: var(--text-color);
     padding: 1rem;
     text-align: center;
 }
@@ -16,18 +30,13 @@ main {
     padding: 1rem;
 }
 
-form {
-    margin-bottom: 2rem;
-}
-
 .movie-grid {
     display: flex;
     flex-wrap: wrap;
 }
 
-/* Styling for individual movie cards */
 .movie-card {
-    background: #fff;
+    background: var(--card-bg);
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -35,7 +44,7 @@ form {
     box-sizing: border-box;
     transition: transform 0.3s, box-shadow 0.3s;
     min-width: 200px;
-    margin-right: 10px;
+    margin: 30px;
 }
 
 .movie-card:hover {
@@ -57,7 +66,6 @@ form {
     margin: 0;
 }
 
-/* Scrollable movie list */
 .scrollable-container {
     display: flex;
     overflow-x: auto;
@@ -70,12 +78,12 @@ form {
 }
 
 .scrollable-container::-webkit-scrollbar-thumb {
-    background-color: #888;
+    background-color: var(--subtext-color);
     border-radius: 5px;
 }
 
 .scrollable-container::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
+    background-color: var(--border-color);
 }
 
 .scrollable-container .movie-card {
@@ -84,36 +92,15 @@ form {
     scroll-snap-align: start;
 }
 
-/* Movie details page styles */
 .container {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
 }
 
-.movie-details {
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    flex-wrap: wrap;
-}
-
 .movie-poster-large {
     max-width: 100%;
     border-radius: 10px;
-    /* max-height: 600px; */
-}
-
-.movie-info {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    flex: 2; 
-    padding-left: 20px;
 }
 
 .movie-info p {
@@ -126,16 +113,18 @@ form {
 
 .movie-info .highlight {
     font-size: 1.1em;
-    color: #f56b2a;
+    color: var(--accent-color);
 }
 
 footer {
     text-align: center;
     margin-top: 40px;
     padding: 20px;
-    background-color: #f56b2a;
-    color: #fff;
+    background-color: var(--footer-bg);
+    color: var(--text-color);
     font-size: 1.2em;
+    left: 0;
+    bottom: 0;
 }
 
 .show-container {
@@ -146,11 +135,10 @@ footer {
 }
 
 .show-card {
-    border: 1px solid #ccc;
+    border: 1px solid var(--border-color);
     border-radius: 8px;
     overflow: hidden;
     width: 200px;
-    /* Adjust as needed */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -171,64 +159,150 @@ footer {
 
 .show-release-year {
     font-size: 0.8em;
-    color: #555;
+    color: var(--subtext-color);
     padding: 0 10px;
     margin-bottom: 10px;
 }
 
-.provider-available{
-
-}
 .provider-logos {
-    display: flex;              /* Use flexbox for horizontal layout */
-    flex-wrap: wrap;           /* Allow wrapping if there are too many providers */
-    gap: 10px;                 /* Space between logos */
-    margin-top: 10px;          /* Space above the provider logos */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .provider-logo {
-    max-width: 100px;          /* Set a maximum width for the logos */
-    height: auto;              /* Keep the aspect ratio */
-}
-
-
-/* New styling based on updated IDs and classes */
-.movie-info p {
-    border-bottom: 1px solid #ddd;
-    padding: 10px 0;
-}
-
-#movie-info-title {
-    font-size: 1.5em;
-    color: #333;
+    max-width: 100px;
+    height: auto;
 }
 
 #movie-info-overview {
     font-style: italic;
-    color: #555;
+    color: var(--subtext-color);
 }
 
-#movie-info-release_date,
-#movie-info-genres {
+.movie-details {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    border: 1px solid var(--border-color);
+    background-color: var(--secondary-bg);
+    margin-bottom: 20px;
+}
+
+.poster {
+    flex: 1 1 280px;
+    margin-right: 20px;
+    text-align: center;
+}
+
+.poster img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.movie-info {
+    flex: 2 1 600px;
+}
+
+#movie-info-title {
+    display: inline-block;
+    font-size: 28px;
     font-weight: bold;
-    color: #444;
+    margin-right: 20px;
+}
+
+#movie-info-release_date {
+    right: 0px;
+    display: inline-block;
+    font-size: 16px;
+    color: var(--subtext-color);
+    vertical-align: middle;
+}
+
+#movie-info-overview {
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+#movie-info-genres {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+#movie-info-tagline {
+    color: var(--highlight-color);
+    font-style: italic;
 }
 
 .additional-info {
-    display: flex;
-    flex-direction: row;
+    flex-basis: 100%;
     margin-top: 20px;
 }
 
 .additional-info p {
-    margin-bottom: 5px;
+    font-size: 14px;
+    color: var(--text-color);
+    margin: 5px 0;
 }
 
-#movie-info-release_date{
-
+.additional-info strong {
+    color: var(--text-color);
 }
 
-.poster{
-    flex: 1; 
-    min-width: 250px;
+h5, h3, h1, h2, h6, p{
+    color: var(--text-color);
+}
+
+.movie-card-title{
+    padding: 0.5rem;
+    font-size: 1rem;
+    text-align: center;
+    background: #fafafa;
+    margin: 0;
+    text-decoration: none;
+    color: var(--text-black);
+}
+
+.form {
+    background-color: var(--card-bg); /* Card background color */
+    border-radius: 8px; /* Rounded corners */
+    padding: 20px; /* Padding inside the form */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
+}
+
+.form-input {
+    width: 100%; /* Full width inputs */
+    padding: 10px; /* Padding inside inputs */
+    margin-bottom: 15px; /* Space between inputs */
+    border: 1px solid var(--border-color); /* Border color from your variables */
+    border-radius: 4px; /* Slightly rounded corners */
+    box-sizing: border-box; /* Include padding in width calculation */
+    transition: border-color 0.3s; /* Smooth transition for focus */
+    background-color: var(--secondary-bg); /* Input background color */
+    color: var(--text-color); /* Text color */
+}
+
+.form-input:focus {
+    border-color: var(--accent-color); /* Highlight border on focus */
+    outline: none; /* Remove default outline */
+}
+
+.form-button {
+    background-color: var(--accent-color); /* Use accent color for buttons */
+    color: var(--text-color); /* White text */
+    border: none; /* Remove default border */
+    padding: 10px; /* Padding inside button */
+    border-radius: 4px; /* Rounded corners */
+    cursor: pointer; /* Change cursor to pointer */
+    width: 100%; /* Full width button */
+    transition: background-color 0.3s; /* Smooth transition for hover */
+}
+
+.form-button:hover {
+    background-color: #d45d2f; /* Darker version of accent color on hover */
 }
