--- a/css/styling.css
+++ b/css/styling.css
@@ -19,7 +19,9 @@ body {
     color: var(--text-color); /* Assuming you have color variables */
 }
 
+
 header {
+    /* font-family: 'Cinzel'; */
     background-color: var(--secondary-bg);
     color: var(--text-color);
     padding: 1rem;
@@ -419,4 +421,8 @@ button:hover {
 
 a{
     color: var(--text-color);
+}
+
+.slogan{
+    color: #6b6b6b;
 }
