last mopbile styliong

--- a/css/styling.css
+++ b/css/styling.css
@@ -671,6 +671,73 @@ a {
     margin-right: 20px;
 }
 
+.other-search-div {}
+
+#other-search-options {
+    position: absolute;
+    background-color: var(--border-color);
+}
+
+#toggle-search-options-btn {
+    padding: 10px 15px;
+    background-color: #ff5722;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* Fixed CSS for the toggle */
+#toggle-movie-show {
+    display: none;
+    /* Hide the default checkbox */
+}
+
+#toggle-movie-show+span {
+    display: inline-block;
+    width: 80px;
+    background-color: var(--border-color);
+    /* border-radius: 34px; */
+    position: relative;
+    /* cursor: pointer; */
+    text-align: center;
+    /* padding: 10px; */
+    /* color: white; */
+    /* transition: background-color 0.3s; */
+    padding: 10px 15px;
+    /* background-color: #ff5722; */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#toggle-movie-show:checked+span {
+    background-color: #ff5722;
+    /* Color when checked */
+}
+
+#toggle-movie-show:not(:checked)+span:after {
+}
+
+#toggle-movie-show:checked+span:after {
+    left: calc(100% - 36px);
+    /* Move the switch to the right when checked */
+}
+
+/* Optional styling for the label */
+#show_movie-filter label {
+    cursor: pointer;
+    /* Change cursor for better UX */
+}
+
+/* Highlight styling for suggestions */
+.highlighted {
+    background-color: #595959;
+    /* Change this to your preferred highlight color */
+}
 @media (min-width: 770px) and (max-width: 1450px) {
     #movie-search-form {
         display: flex;
@@ -730,72 +797,37 @@ a {
         left: 33%;
     }
 
-}
+    #toggle-search-options-btn {
+        padding: 10px 15px;
+        background-color: #ff5722;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        height: 100%;
+    }
 
-.other-search-div {}
-
-#other-search-options {
-    position: absolute;
-    background-color: var(--border-color);
-}
-
-#toggle-search-options-btn {
-    padding: 10px 15px;
-    background-color: #ff5722;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-/* Fixed CSS for the toggle */
-#toggle-movie-show {
-    display: none;
-    /* Hide the default checkbox */
-}
-
-#toggle-movie-show+span {
-    display: inline-block;
-    width: 80px;
-    background-color: var(--border-color);
-    /* border-radius: 34px; */
-    position: relative;
-    /* cursor: pointer; */
-    text-align: center;
-    /* padding: 10px; */
-    /* color: white; */
-    /* transition: background-color 0.3s; */
-    padding: 10px 15px;
-    /* background-color: #ff5722; */
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-#toggle-movie-show:checked+span {
-    background-color: var(--accent-color);
-    /* Color when checked */
-}
-
-#toggle-movie-show:not(:checked)+span:after {
-}
-
-#toggle-movie-show:checked+span:after {
-    left: calc(100% - 36px);
-    /* Move the switch to the right when checked */
-}
-
-/* Optional styling for the label */
-#show_movie-filter label {
-    cursor: pointer;
-    /* Change cursor for better UX */
-}
-
-/* Highlight styling for suggestions */
-.highlighted {
-    background-color: #595959;
-    /* Change this to your preferred highlight color */
+    #toggle-movie-show+span {
+        display: inline-block;
+        width: 80px;
+        background-color: var(--border-color);
+        /* border-radius: 34px; */
+        position: relative;
+        /* cursor: pointer; */
+        text-align: center;
+        /* padding: 10px; */
+        /* color: white; */
+        /* transition: background-color 0.3s; */
+        padding: 10px 15px;
+        /* background-color: #ff5722; */
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    #toggle-movie-show:checked+span {
+        background-color: #ff5722;
+    }
 }
